--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,10 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".CurrentlyReadingActivity"/>
+        <activity android:name=".FavoriteActivity"/>
+        <activity android:name=".WantToReadActivity"/>
+        <activity android:name=".AlreadyReadBookActivity"/>
         <activity android:name=".BookActivity"/>
         <activity android:name=".AllBooksActivity"/>
         <activity android:name=".MainActivity">
